# cpu_sim

./: .gitignore  CMakeLists.txt  README.md  UI.cpp  UI.h  common.h  cpu.cpp  cpu.h  main.cpp  process.h  program
Algorithms/: Algorithms.h
Algorithms/FCFS/: FCFS.cpp  FCFS.h
Algorithms/Priority/: Priority.cpp  Priority.h
Algorithms/RR/: RR.cpp  RR.h
Algorithms/SJF/: SJF.cpp  SJF.h
Algorithms/SRTF/: SRTF.cpp  SRTF.h
program.dSYM/Contents/Resources/DWARF/: program
